modified sponsers and sessions & speakers forms

--- a/app/templates/components/forms/wizard/other-details-step.hbs
+++ b/app/templates/components/forms/wizard/other-details-step.hbs
@@ -2,7 +2,7 @@
   class="ui form {{if this.isLoading "loading"}}"
   autocomplete="off"
   novalidate
-  {{action "move" "forward" on="submit" preventDefault=true}}
+  {{action "move" "forward" on="submit" preventDefault=true}} style="cursor: default"
 >
   <div class="my-card">
       <h3 class="ui dividing header weight-300">
