modified collapsible header and changed font weights

--- a/app/templates/components/events/view/overview/event-apps.hbs
+++ b/app/templates/components/events/view/overview/event-apps.hbs
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="header">{{t 'Website Generator'}}</div>
+  <div class="header weight-300">{{t 'Website Generator'}}</div>
 </div>
 <div class="content ui grid">
   <div class="row pt-0">
