--- a/app/templates/components/events/view/overview/event-setup-checklist.hbs
+++ b/app/templates/components/events/view/overview/event-setup-checklist.hbs
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="header">{{t 'Event Checklist'}}</div>
+  <h3 class="header weight-300">{{t 'Event Checklist'}}</h3>
 </div>
 <div class="content">
 
