--- a/app/templates/components/events/view/overview/general-info.hbs
+++ b/app/templates/components/events/view/overview/general-info.hbs
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="header">{{t 'Highlight'}}</div>
+  <div class="header weight-300">{{t 'Highlight'}}</div>
 </div>
 
 {{#if (eq this.data.event.state 'published')}}
