--- a/app/templates/components/events/view/overview/manage-roles.hbs
+++ b/app/templates/components/events/view/overview/manage-roles.hbs
@@ -1,5 +1,5 @@
 <div class="content d-flex" style="align-items: center;">
-  <div class="header">{{t 'Team Members'}}</div>
+  <div class="header weight-300">{{t 'Team Members'}}</div>
   {{#if @editable}}
   <button class="ui blue button ml-auto" {{action 'openAddUserRoleModal' }}>{{t 'Add People'}}</button>
   {{/if}}
