--- a/app/templates/events/view.hbs
+++ b/app/templates/events/view.hbs
@@ -7,7 +7,7 @@
   <div class="ui grid stackable">
     <div class="row">
       <div class="ten wide column">
-        <h2 class="ui header">
+        <h2 class="ui header weight-400">
           {{this.model.name}}
         </h2>
       </div>
