--- a/app/templates/components/events/view/overview/speaker-session.hbs
+++ b/app/templates/components/events/view/overview/speaker-session.hbs
@@ -1,5 +1,5 @@
 <div class="content">
-  <div class="header">{{t 'Sessions and Speakers'}}</div>
+  <div class="header weight-300">{{t 'Sessions and Speakers'}}</div>
 </div>
 <div class="content">
   <h4 class="ui header">{{t 'Summary'}}</h4>
