--- a/app/templates/components/footer-main.hbs
+++ b/app/templates/components/footer-main.hbs
@@ -1,12 +1,14 @@
-<div class="ui {{if this.device.isMobile 'center aligned container' 'grid'}} mb-8">
+{{!-- <div class="ui {{if this.device.isMobile 'center aligned container' 'grid'}} mb-8"> --}}
+<div class="ui {{if this.device.isMobile 'center aligned container' 'grid'}}">
   {{#if (eq this.device.isMobile false)}}
     <div class="three wide column"></div>
   {{/if}}
   <div class="{{if (eq this.device.isMobile false) 'ten wide column'}}">
-    <div class="ui stackable inverted divided grid">
+    <div class="ui stackable inverted grid">
       <div class="four wide column">
         <div class="ui left aligned container inverted link list">
-          <strong class="item">{{t 'Use {{app}}' app=this.settings.appName}}</strong>
+          {{!-- <strong class="item">{{t 'Use {{app}}' app=this.settings.appName}}</strong> --}}
+          <p class="item" style="color: #ffffff;">{{t 'Use {{app}}' app=this.settings.appName}}</p>
           <a class="item" href="https://support.eventyay.com" target="_blank" rel="noopener noreferrer">{{t 'How it Works'}}</a>
           <a class="item" href="{{href-to 'pricing'}}"> {{t 'Pricing'}} </a>
           <a class="item" href="https://blog.eventyay.com/" rel="noopener noreferrer">{{t 'Blog'}}</a>
@@ -14,7 +16,8 @@
       </div>
       <div class="four wide column">
         <div class="ui left aligned container inverted link list">
-          <strong class="item">{{t 'Plan Events'}}</strong>
+          {{!-- <strong class="item">{{t 'Plan Events'}}</strong> --}}
+          <p class="item" style="color: #ffffff;">{{t 'Plan Events'}}</p>
           <a class="item" href="https://support.eventyay.com/event-setup/How-can-I-create-an-event.html" target="_blank" rel="noopener noreferrer">
             {{t 'Online Registration'}}
           </a>
@@ -28,7 +31,8 @@
       </div>
       <div class="four wide column">
         <div class="ui left aligned container inverted link list">
-          <strong class="item">{{t 'Find Events'}}</strong>
+          {{!-- <strong class="item">{{t 'Find Events'}}</strong> --}}
+          <p class="item" style="color: #ffffff;">{{t 'Find Events'}}</p>
           <a class="item" href="{{href-to 'explore'}}">
             {{t 'Browse Events'}}
           </a>
@@ -42,7 +46,8 @@
       </div>
       <div class="four wide column">
         <div class="ui left aligned container inverted link list">
-          <strong class="item">{{t 'Connect With Us'}}</strong>
+          {{!-- <strong class="item">{{t 'Connect With Us'}}</strong> --}}
+          <p class="item" style="color: #ffffff;">{{t 'Connect With Us'}}</p>
           {{#if this.socialLinks.supportUrl}}
             <a class="item" href="{{this.socialLinks.supportUrl}}" target="_blank" rel="noopener noreferrer">
               <i class="info icon"></i> {{t 'Blog'}}
@@ -101,7 +106,7 @@
         </div>
       </div>
     </div>
-    <div class="ui inverted section divider"></div>
+    {{!-- <div class="ui inverted section divider"></div> --}}
     <div class="ui stackable grid">
       <div class="thirteen wide computer twelve wide tablet column left aligned">
         <div class="ui horizontal inverted small divided link list no top margin">
