--- a/app/templates/components/widgets/forms/ticket-input.hbs
+++ b/app/templates/components/widgets/forms/ticket-input.hbs
@@ -62,7 +62,7 @@
           <i class="setting icon"></i>
         </button>
         <button type="button" class="ui button" {{action this.removeTicket}} data-content="Delete">
-          <i class="trash icon"></i>
+          <i class="trash red icon"></i>
         </button>
       </div>
       <div class="ui icon buttons {{if this.device.isLargeMonitor 'right floated'}}">
