--- a/app/components/forms/wizard/wizard-footer.hbs
+++ b/app/components/forms/wizard/wizard-footer.hbs
@@ -1,13 +1,13 @@
 <div class="ui grid">
   <div class="sixteen wide column {{unless @device.isMobile 'right aligned'}}">
     {{#if @event.identifier}}
-      <LinkTo @route="events.view.index" @model={{@event.identifier}} class="ui red button left labeled icon small right aligned mt-4 {{if this.isUserUnverified 'disabled'}} button">
-        <i class="close icon"></i>
+      <LinkTo @route="events.view.index" @model={{@event.identifier}} class="ui button left labeled icon small right aligned mt-4 {{if this.isUserUnverified 'disabled'}} button">
+        <i class="close red icon"></i>
         {{t 'Cancel'}} 
       </LinkTo>
     {{else}}
-      <LinkTo @route="events.list" @model="live" class="ui orange button left labeled icon small mt-4 {{if this.isUserUnverified 'disabled'}}">
-         <i class="close icon"></i>
+      <LinkTo @route="events.list" @model="live" class="ui button left labeled icon small mt-4 {{if this.isUserUnverified 'disabled'}}">
+         <i class="close red icon"></i>
          {{t 'Discard'}}
       </LinkTo>
     {{/if}}
@@ -24,12 +24,12 @@
       </button>
     {{/if}} --}}
     {{#if (eq @event.state 'draft')}}
-      <button class="ui blue button left labeled icon small right aligned {{if @loading 'disabled'}} mt-4" type="button" {{action @onSaveDraft}}>
+      <button class="ui teal button left labeled icon small right aligned {{if @loading 'disabled'}} mt-4" type="button" {{action @onSaveDraft}}>
         <i class="save icon"></i>
         {{t 'Save as draft'}}
       </button>
     {{else}}
-      <button class="ui blue button left labeled icon small right aligned {{if @loading 'disabled'}}" type="button" {{action @onSaved}}>
+      <button class="ui teal button left labeled icon small right aligned {{if @loading 'disabled'}}" type="button" {{action @onSaved}}>
         <i class="save icon"></i>
         {{t 'Save'}}
       </button>
