--- a/app/templates/components/modals/tax-info-modal.hbs
+++ b/app/templates/components/modals/tax-info-modal.hbs
@@ -1,13 +1,10 @@
 <i class="black close icon"></i>
 <div class="header">
-  {{t 'Add tax information'}}
+  {{t 'Add Tax Information'}}
 </div>
 <div class="y-scrollable scrollable-modal content">
   <form class="ui form" autocomplete="off" {{action 'updateTaxInfo' on='submit' preventDefault=true}}>
-    <CountryDropdown
-      @required={{true}}
-      @placeholder={{t 'Choose country'}}
-      @val={{this.tax.country}}
+    <CountryDropdown @required={{true}} @placeholder={{t 'Choose country' }} @val={{this.tax.country}}
       @id="tax_country" />
     <div class="field">
       <label class="required">{{t 'Tax name'}}</label>
@@ -24,7 +21,8 @@
     <div class="field">
       <label>{{t 'Tax Invoices'}}</label>
       <div class="ui checkbox">
-        <Input @type="checkbox" @id="send_tax_invoices" @name="send_tax_invoices" @checked={{this.tax.shouldSendInvoice}} />
+        <Input @type="checkbox" @id="send_tax_invoices" @name="send_tax_invoices"
+          @checked={{this.tax.shouldSendInvoice}} />
         <label for="send_tax_invoices">
           <strong>{{t 'Send tax invoice to attendees'}} : </strong>
           <span class="text muted">
@@ -40,7 +38,8 @@
     </div>
     <div class="field">
       <label>{{t 'Business Address'}}</label>
-      <Textarea @rows={{3}} @id="tax_invoice_address" @value={{this.tax.address}} />    </div>
+      <Textarea @rows={{3}} @id="tax_invoice_address" @value={{this.tax.address}} />
+    </div>
     <div class="field">
       <label>{{t 'City'}}</label>
       <Input @type="text" @id="tax_invoice_city" @value={{this.tax.city}} />
@@ -55,18 +54,21 @@
     </div>
     <div class="field">
       <label>{{t 'Text for invoice footer (optional)'}}</label>
-      <Textarea @rows={{3}} @id="tax_invoice_footer" @value={{this.tax.invoiceFooter}} />    </div>
+      <Textarea @rows={{3}} @id="tax_invoice_footer" @value={{this.tax.invoiceFooter}} />
+    </div>
     <div class="grouped fields">
       <label for="privacy">{{t 'Add or Include Tax Fee'}}</label>
       <div class="field">
         <div class="ui radio checkbox">
-          <Widgets::Forms::RadioButton @name="tax_add_include" @id="add_tax" @value="add" @checked={{this.isTaxIncludedInPrice}} />
+          <Widgets::Forms::RadioButton @name="tax_add_include" @id="add_tax" @value="add"
+            @checked={{this.isTaxIncludedInPrice}} />
           <label for="add_tax">{{t 'Add tax as separate fee on top of the price'}}</label>
         </div>
       </div>
       <div class="field">
         <div class="ui radio checkbox">
-          <Widgets::Forms::RadioButton @name="tax_add_include" @id="include_tax" @value="include" @checked={{this.isTaxIncludedInPrice}} />
+          <Widgets::Forms::RadioButton @name="tax_add_include" @id="include_tax" @value="include"
+            @checked={{this.isTaxIncludedInPrice}} />
           <label for="include_tax">{{t 'Include tax in ticket price'}}</label>
         </div>
       </div>
@@ -74,11 +76,12 @@
   </form>
 </div>
 <div class="actions">
-  <button type="button" class="ui black button" {{action 'close'}}>
+  <button type="button" class="ui left labeled icon button" {{action 'close' }}>
+    <i class="ban red icon"></i>
     {{t 'Cancel'}}
   </button>
-  <button type="button" class="ui green right labeled icon button" {{action 'updateTaxInfo'}}>
-    {{t 'Update tax information'}}
+  <button type="button" class="ui teal left labeled icon button" {{action 'updateTaxInfo' }}>
     <i class="checkmark icon"></i>
+    {{t 'Update Tax Information'}}
   </button>
 </div>
