--- a/app/templates/components/widgets/forms/rich-text-editor.hbs
+++ b/app/templates/components/widgets/forms/rich-text-editor.hbs
@@ -15,6 +15,9 @@
   </div>
   <div class="ui icon buttons">
     <a href="#" class="ui button" data-wysihtml5-command="createLink" data-content="{{t 'Insert Link'}}" ><i class="linkify icon"></i></a>
+    <button type="button" class="ui button" {{action 'toggle'}}>
+      <i class="microphone icon"></i>
+    </button>
   </div>
     <div data-wysihtml5-dialog="createLink" class="mb-8" style={{css display='none'}}>
       <label>
