--- a/app/templates/components/widgets/forms/date-picker.hbs
+++ b/app/templates/components/widgets/forms/date-picker.hbs
@@ -2,4 +2,6 @@
 {{#if this.icon}}
   <i class="calendar icon"></i>
 {{/if}}
-<Input @type="text" @value={{value}} placeholder={{this.placeholder}} @name={{name}} @focus-out={{action "onChange"}} />
+<Input @type="text" @value={{value}} placeholder={{this.placeholder}} @name={{name}}
+       @focus-out={{action "onChange"}}
+   />
