--- a/app/templates/components/widgets/forms/rich-text-editor.hbs
+++ b/app/templates/components/widgets/forms/rich-text-editor.hbs
@@ -15,7 +15,7 @@
   </div>
   <div class="ui icon buttons">
     <a href="#" class="ui button" data-wysihtml5-command="createLink" data-content="{{t 'Insert Link'}}" ><i class="linkify icon"></i></a>
-    <button type="button" class="ui button" {{action 'toggle'}}>
+    <button type="button" class="ui button" {{action 'toggle'}}> data-content="{{t 'Microphone'}}"
       <i class="microphone icon"></i>
     </button>
   </div>
