--- a/app/templates/components/forms/wizard/basic-details-step.hbs
+++ b/app/templates/components/forms/wizard/basic-details-step.hbs
@@ -110,13 +110,9 @@
           @type="text"
           @name="start_date"
           @placeholder="MM/DD/YYYY"
-          @rangePosition="end"
+          @rangePosition="start"
           @value={{this.data.event.startsAtDate}}
-          @onChange={{pipe-action
-            (action "updateSalesEndDate")
-            (action "onChange")
-          }}
-        />
+          @onChange={{pipe-action (action "updateSalesEndDate") (action "onChange")}}/>
       </div>
       <div class="three wide field">
         <label for="start_time">&nbsp;</label>
