--- a/app/templates/components/widgets/forms/time-picker.hbs
+++ b/app/templates/components/widgets/forms/time-picker.hbs
@@ -2,5 +2,6 @@
   {{#if this.icon}}
     <i class="time icon"></i>
   {{/if}}
-  <Input @type="text" @value={{value}} placeholder={{this.placeholder}} @name={{name}} @focus-out={{action "onChange"}} />
+  <Input @type="text" @value={{value}} placeholder={{this.placeholder}} @name={{name}} @focus-out={{action "onChange"}}
+         onkeydown="return false"/>
 </div>
