Changed button colors in 9 files

--- a/app/templates/components/events/view/overview/event-sponsors.hbs
+++ b/app/templates/components/events/view/overview/event-sponsors.hbs
@@ -2,7 +2,8 @@
   <div class="header weight-300">{{t 'Sponsors'}}</div>
   <LinkTo
   @route="events.view.edit.sponsors"
-  @tagName="button" class="ui right floated blue button item ml-auto">
+  @tagName="button" class="ui teal right floated left labeled icon button item ml-auto">
+  <i class="pencil icon"></i>
     {{t 'Edit'}}
   </LinkTo>
 </div>
