--- a/app/templates/components/events/view/overview/manage-roles.hbs
+++ b/app/templates/components/events/view/overview/manage-roles.hbs
@@ -5,8 +5,8 @@
   {{/if}}
   {{#if @showLink}}
   <LinkTo @route="events.view.team.index" class="item ml-auto">
-    <button class="ui button labeled icon small blue">
-      <i class="edit icon"></i>
+    <button class="ui teal right floated left labeled icon button item ml-auto">
+      <i class="pencil icon"></i>
       {{t 'Edit'}}
       </button>
   </LinkTo>
