--- a/app/components/forms/wizard/custom-forms/table.hbs
+++ b/app/components/forms/wizard/custom-forms/table.hbs
@@ -83,11 +83,11 @@
           {{#if this.editColumn}}
             <td class="border center aligned">
               {{#if field.isComplex}}
-                <button class="ui compact icon positive circular button" data-tooltip="{{t 'Edit'}}" {{action  @updateField field}}>
+                <button class="ui icon circular button" data-tooltip="{{t 'Edit'}}" {{action  @updateField field}}>
                   <i class="pencil icon"></i>
                 </button>
-                <button class="ui compact icon negative circular button" data-tooltip="{{t 'Delete'}}" {{action (confirm (t "Are you sure you want to delete this?") (action @removeField field))}}>
-                  <i class="trash icon"></i>
+                <button class="ui icon circular button mt-2" data-tooltip="{{t 'Delete'}}" {{action (confirm (t "Are you sure you want to delete this?") (action @removeField field))}}>
+                  <i class="trash red icon"></i>
                 </button>
               {{/if}}
             </td>
