added my events header and notification tooltip

--- a/app/templates/events.hbs
+++ b/app/templates/events.hbs
@@ -1,5 +1,6 @@
 {{#if (and (not-includes this.session.currentRouteName 'events.view') (not-includes this.session.currentRouteName 'events.my-sessions'))}}
   <UnverifiedUserMessage />
+  <h1 class="ui header weight-400">{{t 'My Events'}}</h1>
   <div class="row">
     <div class="sixteen wide column">
       <TabbedNavigation>
