--- a/app/templates/components/notification-dropdown.hbs
+++ b/app/templates/components/notification-dropdown.hbs
@@ -1,4 +1,9 @@
-<i class="mail outline icon {{unless this.unreadNotifications.length 'ui no right margin'}}"></i>
+{{!-- <i class="mail outline icon {{unless this.unreadNotifications.length 'ui no right margin'}}"></i> --}}
+<div class="tooltip">
+  <i class="mail outline icon {{unless this.unreadNotifications.length 'ui no right margin'}}"></i>
+  <span class="tooltiptext">{{t 'Notifications'}}</span>
+</div>
+
 {{#if this.unreadNotifications.length}}
   <div class="floating ui teal circular mini label {{if this.device.isMobile 'tiny text'}}">{{this.unreadNotifications.length}}</div>
 {{/if}}
