Changed notification icon to Bell

--- a/app/templates/components/notification-dropdown.hbs
+++ b/app/templates/components/notification-dropdown.hbs
@@ -1,6 +1,6 @@
 {{!-- <i class="mail outline icon {{unless this.unreadNotifications.length 'ui no right margin'}}"></i> --}}
 <div class="tooltip">
-  <i class="mail outline icon {{unless this.unreadNotifications.length 'ui no right margin'}}"></i>
+  <i class="bell outline icon {{unless this.unreadNotifications.length 'ui no right margin'}}"></i>
   <span class="tooltiptext">{{t 'Notifications'}}</span>
 </div>
 
