--- a/app/templates/components/event-card.hbs
+++ b/app/templates/components/event-card.hbs
@@ -1,21 +1,28 @@
+{{!--
+<style>
+  .hashtags:hover {
+    text-decoration: underline;
+  }
+</style>
+--}}
+
 <div class="{{if this.isWide 'event wide ui grid row'}}" style="height: 100%;">
   {{#if this.isWide}}
-    {{#unless this.device.isMobile}}
-      <div class="ui card rounded-r-none three wide computer six wide tablet column">
-        <a class="image" href="{{href-to (if this.isCFS 'public.cfs' 'public') this.event.id}}">
-          <Widgets::SafeImage
-            @src={{if this.event.thumbnailImageUrl this.event.thumbnailImageUrl this.event.originalImageUrl}} />
-        </a>
-      </div>
-    {{/unless}}
+  {{#unless this.device.isMobile}}
+  <div class="ui card rounded-r-none three wide computer six wide tablet column">
+    <a class="image" href="{{href-to (if this.isCFS 'public.cfs' 'public') this.event.id}}">
+      <Widgets::SafeImage @src={{if this.event.thumbnailImageUrl this.event.thumbnailImageUrl
+        this.event.originalImageUrl}} />
+    </a>
+  </div>
+  {{/unless}}
   {{/if}}
-  <div style="height: 100%;"
-    class="ui card {{this.eventClass}}">
+  <div style="height: 100%;" class="ui card {{this.eventClass}}">
     {{#unless this.isWide}}
-      <a class="image" href="{{href-to (if this.isCFS 'public.cfs' 'public') this.event.id}}">
-        <Widgets::SafeImage
-          @src={{if this.event.thumbnailImageUrl this.event.thumbnailImageUrl this.event.originalImageUrl}} />
-      </a>
+    <a class="image" href="{{href-to (if this.isCFS 'public.cfs' 'public') this.event.id}}">
+      <Widgets::SafeImage @src={{if this.event.thumbnailImageUrl this.event.thumbnailImageUrl
+        this.event.originalImageUrl}} />
+    </a>
     {{/unless}}
     <a class="main content" href="{{href-to (if this.isCFS 'public.cfs' 'public') this.event.id}}">
       <SmartOverflow @class="header">
@@ -24,6 +31,7 @@
       <div class="meta mb-2">
         <span class="date">
           <Public::EventDateTime @event={{@event}} @noBreak={{true}} />
+          {{!-- {{did-update this.timezoneUpdated @timezone}} --}}
         </span>
       </div>
       <Public::EventVenue @event={{@event}} />
@@ -34,45 +42,42 @@
       </span>
       <span class="hashtags">
         {{#if hasBlock}}
-          {{yield}}
+        {{yield}}
         {{else}}
-          {{#if this.filterByTags}}
-            <a href="#"
-              class="link item {{if (eq this.category this.event.topic.name) 'active'}}"
-              {{action 'selectCategory' this.event.topic.name}}>
-              {{t-var this.tags.[0]}}
-            </a>
-            <a href="#"
-              class="link item {{if (eq this.eventType this.event.type.name) 'active'}}"
-              {{action 'selectEventType' this.event.type.name}}>
-              {{t-var this.tags.[1]}}
-            </a>
-            <a href="#"
-              class="link item {{if (eq this.subCategory this.event.subTopic.slug) 'active'}}"
-              {{action 'selectCategory' this.event.topic.name this.event.subTopic.slug}}>
-              {{t-var this.tags.[2]}}
-            </a>
-          {{else}}
-            <a href="{{href-to 'explore' (query-params category=this.event.topic.name event_type=null sub_category=null)}}"
-              class="link item">
-              {{t-var this.tags.[0]}}
-            </a>
-            <a href="{{href-to 'explore' (query-params category=null event_type=this.event.type.name sub_category=null)}}"
-              class="link item">
-              {{t-var this.tags.[1]}}
-            </a>
-            <a href="{{href-to 'explore' (query-params category=this.event.topic.name event_type=null sub_category=this.event.subTopic.slug)}}"
-              class="link item">
-              {{t-var this.tags.[2]}}
-            </a>
-          {{/if}}
+        {{#if this.filterByTags}}
+        <a href="#" class="link item {{if (eq this.category this.event.topic.name) 'active'}}" {{action 'selectCategory'
+          this.event.topic.name}} title="search for {{t-var this.tags.[0]}}">
+          {{t-var this.tags.[0]}}
+        </a>
+        <a href="#" class="link item {{if (eq this.eventType this.event.type.name) 'active'}}"
+          {{action 'selectEventType' this.event.type.name}} title="search for {{t-var this.tags.[1]}}">
+          {{t-var this.tags.[1]}}
+        </a>
+        <a href="#" class="link item {{if (eq this.subCategory this.event.subTopic.slug) 'active'}}"
+          {{action 'selectCategory' this.event.topic.name this.event.subTopic.slug}} title="search for {{t-var this.tags.[2]}}">
+          {{t-var this.tags.[2]}}
+        </a>
+        {{else}}
+        <a href="{{href-to 'explore' (query-params category=this.event.topic.name event_type=null sub_category=null)}}"
+          class="link item" title="search for {{t-var this.tags.[0]}}">
+          {{t-var this.tags.[0]}}
+        </a>
+        <a href="{{href-to 'explore' (query-params category=null event_type=this.event.type.name sub_category=null)}}"
+          class="link item" title="search for {{t-var this.tags.[1]}}">
+          {{t-var this.tags.[1]}}
+        </a>
+        <a href="{{href-to 'explore' (query-params category=this.event.topic.name event_type=null sub_category=this.event.subTopic.slug)}}"
+          class="link item" title="search for {{t-var this.tags.[2]}}">
+          {{t-var this.tags.[2]}}
+        </a>
+        {{/if}}
         {{/if}}
       </span>
       {{#if this.addToGroup}}
-        <button class="fluid ui blue button" {{action this.addEvent this.event}}>Add event to group</button>
+      <button class="fluid ui blue button" {{action this.addEvent this.event}}>Add event to group</button>
       {{/if}}
       {{#if this.removeFromGroup}}
-        <button class="fluid ui red button" {{action this.removeEvent this.event}}>Remove event from group</button>
+      <button class="fluid ui red button" {{action this.removeEvent this.event}}>Remove event from group</button>
       {{/if}}
     </div>
   </div>
