--- a/app/templates/public.hbs
+++ b/app/templates/public.hbs
@@ -11,9 +11,9 @@
             </LinkTo>
           {{/if}}
           <div>
-            <h4 class="event time">{{general-date this.model.startsAt 'date-time-tz-long' tz=this.model.timezone}}</h4>
+            <h4 class="event time">{{general-date this.model.startsAt 'date-time-tz-long' tz=@timezone}}</h4>
             {{#if this.displayEndDate}}
-              <h5 class="event time ends">{{t 'To'}} {{general-date this.model.endsAt 'date-time-tz-long' tz=this.model.timezone}}</h5>
+              <h5 class="event time ends">{{t 'To'}} {{general-date this.model.endsAt 'date-time-tz-long' tz=@timezone}}</h5>
             {{/if}}
             <LinkTo @route="public">
               <h1 class="event name text-white">{{this.model.name}}</h1>
